# audit-trail-fastAPI

./: .gitignore  README.md  config.default.yml  config.py  main.py  pyproject.toml  sql_app.db
database/: crud.py  database.py  models.py  schemas.py
